cmake_minimum_required(VERSION 2.8.3)
project(ros_msgs)

## Find catkin macros and libraries
## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
## is used, also find other catkin packages
#find_package(catkin REQUIRED roscpp rospy std_msgs geometry_msgs message_generation)
find_package(catkin REQUIRED roscpp std_msgs message_generation)

add_message_files(
  FILES
  WorldModelDistributionMsg.msg
)

add_service_files(
  FILES
  DeclarativeGroundings.srv
)

## Generate added messages and services with any dependencies listed here
generate_messages(
  DEPENDENCIES
  std_msgs
)


